# not_redis

./: Cargo.toml  README.md
config/: config.json
src/: main.rs
src/modules/: config.rs  mod.rs
src/modules/api/: life_services.rs  middleware.rs  mod.rs  req_logger.rs
src/modules/queuer/: mod.rs  services.rs
src/modules/queuer/logic/: mod.rs  workers.rs
