[package]
name = "not_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
error_mapper = "0.4.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"]}