[package]
name = "not_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"]}
dashmap = "6.1.0"
error_mapper = "0.4.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.140" }
the_logger = "0.5.3"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"]}
uuid = { version = "1.17.0", features = ["v4"] }